--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 
+.width-card {
+    width: 90%;
+    max-width: 600px;
+    min-width: 360px;
+    margin: auto;
+}
+
 body {
     font-family: "Lato", sans-serif;
   }
@@ -18,7 +25,7 @@ body {
   }
 
 #accordion-item {
-    width: 40%;
+    width: 100%;
 }
 
 /* body{
